Linked zone from root scope to bottom directive scope Cleaning Add filter hrrToBpmFilter and apply it Using 2 angular directive instead of 1: A global directive healthCustomZones for managing zone A unit directive hrZone add controllerFunction Inject first values inside customHeartRateZone directive Initialize customHeartRateZone directive

--- a/hook/extension/pages/app/views/healthSettings.html
+++ b/hook/extension/pages/app/views/healthSettings.html
@@ -38,14 +38,5 @@
         </table>
     </form>
     <h3 data-ng-hide="false"><span class="label label-primary">Your heartrate custom zones</span></h3>
-    <form name="healthCustomZones">
-        <!-- <table class="table table-hover"> -->
-            <div data-ng-repeat="zone in zones">
-                {{zone | json}}
-                <input type="number" min="10" max="2500" class="form-control"></input>
-                
-            </div>
-        <!-- </table> -->
-        <div>Add zone | Remove zone</div>
-    </form>
+    <div data-health-custom-zones data-hr-zones="zones" data-user-max-hr="{{userMaxHr}}" data-user-rest-hr="{{userRestHr}}"></div>
 </div>
