New userHrrZones settings definition New manifest version

--- a/hook/extension/pages/app/views/hrZones/healthCustomZonesTemplate.html
+++ b/hook/extension/pages/app/views/hrZones/healthCustomZonesTemplate.html
@@ -1,5 +1,5 @@
 <form name="healthCustomZones">
-	<strong>HR Zones final value debug:</strong> <div>{{hrZones | json}}</div>
+	<strong>HR Zones final value debug:</strong> <div>{{hrZones | json}} <u data-ng-click="debugHrZones()">Debug it</u></div>
 	<br/>
     <!-- <table class="table table-hover"> -->
     <div data-ng-repeat="zone in hrZones">
