toHrr equals fromHrr on next zone fromHrr equals toHrr on previous zone angular update 1.3.8 Angular watch global hr zones now possible with previous and new value Fix % in zone always 0 Change hr zone user settings to % update manifest version push signing key update manifest version Training Impulse label shorter Debug hrZone Linked zone from root scope to bottom directive scope Cleaning Add filter hrrToBpmFilter and apply it Using 2 angular directive instead of 1 of customs zones Inject first values inside customHeartRateZone directive

--- a/hook/extension/pages/app/views/hrZones/healthCustomZonesTemplate.html
+++ b/hook/extension/pages/app/views/hrZones/healthCustomZonesTemplate.html
@@ -1,11 +1,9 @@
 <form name="healthCustomZones">
-	<strong>HR Zones final value debug:</strong> <div>{{hrZones | json}} <u data-ng-click="debugHrZones()">Debug it</u></div>
+	<strong>HR Zones final value debug:</strong> <div>{{hrZones | json}}</div>
 	<br/>
-    <!-- <table class="table table-hover"> -->
     <div data-ng-repeat="zone in hrZones">
         Zone #{{$index + 1}}
-        <div data-hr-zone="zone" data-user-max-hr="{{userMaxHr}}" data-user-rest-hr="{{userRestHr}}"></div>
+        <div data-hr-zone="zone" data-hr-zone-id="{{$index}}" data-user-max-hr="{{userMaxHr}}" data-user-rest-hr="{{userRestHr}}"></div>
     </div>
-    <!-- </table> -->
     <div>Add zone | Remove zone</div>
 </form>
