Add reset zones base Workaround: remove hrr values inside popover because of display refresh problems on +/- zone Add/Remove between (3 -­ 10) %HRR zones + clean Bpm computed values along side hrr inputs Display input of %HRR: "Use input or keyboard up/down(html char) arrows to set %HRR of zone X between Y and Z" Reduce custom hr zone font Set add zone/ remove last zone bottom of page Zones be must come from user settings Clean userSettings zones Avoid keydown text + backspace + del on user rest hr / max hr Min value of maxHr must be (restHr + 10) Max value of restHr must be (maxHr ­ 10) Display input message for max hr: Set your max heartrate in beat per minute. You can use input or keyboard up/down(html char) arrows Display input message for rest hr: Invert of max hr... Reformat zones Adding new zone base Fix backspace / delete key event catching on hrr field Add/remove button zone Add popup over hrr field to set value with arrow Avoid input key backspace and Del on some behaviour. Not finished ! Avoid input key edit New simplified UI base Custom zone validation: support first and last zone Improved custom zone validation toHrr equals fromHrr on next zone fromHrr equals toHrr on previous zone

--- a/hook/extension/pages/app/css/app.css
+++ b/hook/extension/pages/app/css/app.css
@@ -7,15 +7,41 @@ footer {
     padding: 10px;
 }
 #about {
-	font-size: 22px;
+    font-size: 22px;
     font-style: italic;
     padding: 10px;
 }
 #donate {
-	font-size: 28px;
+    font-size: 28px;
     text-align: center;
     padding: 75px;
 }
 .aboutquote {
     font-size: 48px;
+}
+.healthCustomZones {
+    margin-top: 50px;
+    margin-left: 50px;
+}
+.healthCustomZonesExplanations {
+    background-color: red;
+    /* tmp ... */
+}
+.hrZoneAddRemove {
+    margin-top: 25px;
+}
+.hrZone .bpmFilter {
+    /*font-size: 16px;*/
+}
+.hrZone table td {
+    width: 125px;
+    text-align: center;
+}
+.hrZoneBpmDescribe img {
+    margin: 10px;
+    width: 25px;
+}
+.printableHrZoneId {
+    font-weight: bold;
+    font-size: 16px;
 }
