--- a/hook/extension/pages/app/views/comonSettings.html
+++ b/hook/extension/pages/app/views/comonSettings.html
@@ -11,7 +11,7 @@
             <tbody>
                 <tr data-ng-repeat="option in section.sectionContent">
                     <td>
-                        <button id="{{option.optionKey}}" popover="Click for help" popover-trigger="mouseenter" class="btn btn-default" data-ng-click="displayOptionHelper(option.optionTitle, option.optionHtml)">{{ option.optionTitle }}</button>
+                        <button id="{{option.optionKey}}" data-popover="Click for help" data-popover-trigger="mouseenter" class="btn btn-default" data-ng-click="displayOptionHelper(option.optionTitle, option.optionHtml)">{{ option.optionTitle }}</button>
                     </td>
                     <td class="text-right">
                         <div data-ng-switch on="option.optionType">
