added roadmap Add health settings to menu Remove veloviewer links in menu Cleaning Change folder pages to options HrZones explanation base Allow 125 %HRR to be set in last zone Allow input switch with SHIFT/TAB Refactor avoidInputKey as a angular service Remove debug mode Better custom hr zones style Reset hrZones Fix "old and new hrZones are equals when the tab is loaded", this create a useless Save() UserSettings default zones update value Check compliant hrZones before save, then save if ok Custom zones and explanations (lorem) side by side

--- a/hook/extension/options/app/css/app.css
+++ b/hook/extension/options/app/css/app.css
@@ -20,14 +20,21 @@ footer {
     font-size: 48px;
 }
 .healthCustomZones {
-    margin-top: 50px;
-    margin-left: 50px;
+    text-align: left;
+    /*margin-top: 50px;*/
+    /*margin-left: 50px;*/
 }
 .healthCustomZonesExplanations {
-    background-color: red;
+    /*background-color: red;*/
     /* tmp ... */
 }
-.hrZoneAddRemove {
+.hrZoneActionButton {
+    width: 125px;
+}
+.hrZoneAddRemoveTop {
+    margin-bottom: 25px;
+}
+.hrZoneAddRemoveBottom {
     margin-top: 25px;
 }
 .hrZone .bpmFilter {
