--- a/hook/extension/options/app/views/healthSettings.html
+++ b/hook/extension/options/app/views/healthSettings.html
@@ -37,7 +37,60 @@
             </thead>
         </table>
     </form>
-    <h3 data-ng-hide="false"><span class="label label-primary">Your heartrate custom zones</span></h3>
-    <div data-health-custom-zones data-hr-zones="zones" data-user-max-hr="{{userMaxHr}}" data-user-rest-hr="{{userRestHr}}" align="center"></div>
-    <div class="healthCustomZonesExplanations">Explanations...</div>
+    <h3 data-ng-hide="false"><span class="label label-primary">Your Heart Rate Reserve (HRR) zones</span></h3>
+    <div class="row">
+        <div class="col-md-6">
+            <div data-health-custom-zones data-hr-zones="zones" data-user-max-hr="{{userMaxHr}}" data-user-rest-hr="{{userRestHr}}" align="center"></div>
+        </div>
+        <div class="col-md-6">
+            <div class="healthCustomZonesExplanations">
+
+                <h3>How to use custom Heart Rate Reserve zones ?</h3>
+                <blockquote>
+
+                    <h4>Edit existing zone</h4>
+                    <blockquote>
+                        Click into HRR fields of the zone you want to edit. A zone is always defined between 2 HRR fields
+                        <br/>
+                        <br/>Hint: You can use input arrows or keyboard arrows to set the value.
+                    </blockquote>
+
+                    <h4>Add a Last HRR zone</h4>
+                    <blockquote>
+                        Click “Add a Last Zone” button to add a new zone at the end of currents zones. The previous last zone will be splitted twice to add the new zone.
+                    </blockquote>
+
+                    <h4>Remove HRR zone</h4>
+                    <blockquote>
+                        Click “Del Last Zone” button to remove the zone at the end of currents zones. The 2 latest zones will be merged to perform this operation.
+                    </blockquote>
+
+                    <h4>Reset HRR zones</h4>
+                    <blockquote>
+                        Click “Reset Zones” to apply default factory zones.
+                    </blockquote>
+                </blockquote>
+
+                <h3>What is Heart Rate Reserve ?</h3>
+                <blockquote>
+                    Heart Rate Reserve (HRR) is the difference between your Maximum Heart Rate (Max HR) and Resting Heart Rate (Rest HR). This is basically your global heart capacity :)
+                    <br/>
+                    <br/>%HRR = 0% is your current Rest HR
+                    <br/>%HRR = 100% is your current Max HR
+                </blockquote>
+
+                <h3>What are Heart Rate Reserve Zones ?</h3>
+                <blockquote>
+                    Heart Rate Reserve Zones represents a distribution of your heart efforts during an activity into zones. Each zone has a beginning and ending HRR value.
+                </blockquote>
+                <h3>Where to see HRR Zone distribution ?</h3>
+                <blockquote>
+                    Inside a strava cycling activity (running coming soon...). Of course you must have heart rate data associated to your activity.
+                </blockquote>
+
+            </div>
+        </div>
+    </div>
+
+
 </div>
